--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
     </main>
     <footer>
-      <p>© 2024 Your Name</p>
+      <p>© 2024 Bella</p>
     </footer>
   </body>
 </html>
